Passage au propre du code et Correction pour avoir le Jeu Quiz et MDP de façon aleatoire