@@ -4,9 +4,6 @@ import backend.minijeu.JeuDechiffrement;
 import general.Init;
 import general.MainController;
 
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-
 import javax.swing.ImageIcon;
 import javax.swing.JLabel;
 import javax.swing.JTextField;
@@ -22,7 +19,7 @@ public class JeuDechiffGraphic extends MiniJeuGraphic{
 
 	public JeuDechiffGraphic(MainController mainController, Fenetre fenetre){
 		super(mainController, fenetre);
-		// System.out.println("mpg graphic");
+
 		this.setLayout(null);
 		this.setOpaque(false);
 		this.setBounds(0, 0, fenetre.getWidth(), fenetre.getHeight());
@@ -30,6 +27,7 @@ public class JeuDechiffGraphic extends MiniJeuGraphic{
 		setupGraphic();
 	}
 
+	@Override
 	public void setupGraphic(){
 
 		super.setupGraphic();
@@ -37,41 +35,37 @@ public class JeuDechiffGraphic extends MiniJeuGraphic{
 		bgImage = new JLabel(new ImageIcon(Init.imagefondjeudecrypt));
 		bgImage.setBounds(0, 0, fenetre.getWidth(), fenetre.getHeight());
 
-		this.add(bgImage, new Integer(0));
+		this.add(bgImage, Integer.valueOf(0));
 
 		titre = new Titre("3. Déchiffrer le Message Secret", 70, 30, 700, 35);
-		this.add(titre, new Integer(1));
+		this.add(titre, Integer.valueOf(1));
 
 		tableau = new JLabel(new ImageIcon(Init.tableaualphabetsymboles));
 		tableau.setBounds(450, 120, 520, 320);
-		this.add(tableau, new Integer(1));
+		this.add(tableau, Integer.valueOf(1));
 
 		zoneChiffre = new ZoneTexte("", titre.getX(), tableau.getY()+100, 350, 60);
-		this.add(zoneChiffre, new Integer(1));
+		this.add(zoneChiffre, Integer.valueOf(1));
 
 		// Image clé
 		chiffre = new JLabel(new ImageIcon(jeuDechiffrement.showImageCle()));
 		chiffre.setBounds(zoneChiffre.getX()+5, zoneChiffre.getY(), 350, 60);
-		this.add(chiffre, new Integer(2));
+		this.add(chiffre, Integer.valueOf(2));
 
 		devine = new JTextField();
 		devine.setBounds(zoneChiffre.getX(), zoneChiffre.getY()+zoneChiffre.getHeight()+30, zoneChiffre.getWidth(), 40);
-		this.add(devine, new Integer(1));
+		this.add(devine, Integer.valueOf(1));
 
 		boutonValider = new Bouton("Valider", (zoneChiffre.getWidth()/2)-60+zoneChiffre.getHeight(), devine.getY()+devine.getHeight()+30, 160, 50);
-		boutonValider.addActionListener(new ActionListener(){
-			@Override
-			public void actionPerformed(ActionEvent e){
-				String reponse = devine.getText().toLowerCase();
-				// Methode Valider avec comme paramètre la réponse
-				jeuDechiffrement.checkResultat(reponse);
-				score = jeuDechiffrement.getScore();
-				score = (int)(((double)score/6)*100);
-				nextMessage();
-				// System.out.println("Valider : "+reponse);
-			}
-		});
-		this.add(boutonValider, new Integer(1));
+		boutonValider.addActionListener(e -> {
+            String reponse = devine.getText().toLowerCase();
+            // Methode Valider avec comme paramètre la réponse
+            jeuDechiffrement.checkResultat(reponse);
+            score = jeuDechiffrement.getScore();
+            score = (int)(((double)score/6)*100);
+            nextMessage();
+        });
+		this.add(boutonValider, Integer.valueOf(1));
 	}
 
 	public void nextMessage(){
